vlib/v/parser/tests/too_many_layers_embedded_generic_type_err.out
vlib/v/parser/tests/too_many_layers_embedded_generic_type_err.vv:11:9: error: too many levels of Parser.parse_generic_inst_type() calls: 11, probably due to too many layers embedded generic type
    9 | o, Wprld<
   10 | o, Wprld<
   11 | o, Wprld<
      |         ^
   12 | o, Wprld<
   13 | o, Wprld<
